Basic structure carrousel. img added

--- a/index.html
+++ b/index.html
@@ -10,42 +10,68 @@
   <body>
     <header>
         <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                  <img src="./assets/platzi-logo.png" alt="Platzi Logo">
-                  Conf Hawaii
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Los oradores</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">El lugar y la fecha</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Conviértete en orador</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
-                  </li>
-                </ul>                
-              </div>
+            <div class="container">            
+                <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/platzi-logo.png" alt="Platzi Logo">
+                    Conf Hawaii
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Los oradores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">El lugar y la fecha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Conviértete en orador</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
+                    </li>
+                    </ul>                
+                </div>
+                </div>
             </div>
           </nav>
     </header>
+
+    <main>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </main>
 
 
 
     <footer id="footer">
         <div class="container">
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-12 col-lg">
                     <a href="#">Preguntas Frecuentes</a>
                 </div>
