--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
           </nav>
     </header>
 
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <main id="main">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/hawaii2.jpg" class="d-block w-100" alt="Hawaii 2">
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/hawaii3.jpeg" class="d-block w-100" alt="Hawaii 3">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
