--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <main id="main">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="./assets/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
@@ -54,6 +54,23 @@
               </div>
               <div class="carousel-item">
                 <img src="./assets/hawaii3.jpeg" class="d-block w-100" alt="Hawaii 3">
+              </div>
+              <div class="overlay">
+                  <div class="container">
+                      <div class="row align-items-center">
+                          <div class="col-md-6 offset-md-6 text-center text-md-end">
+                              <h1>Platzi Conf Hawaii</h1>
+                              <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
+                                compartir con nuestra comunidad el conocimiento y experiencia
+                                de los expertos que están creando el futuro de internet.
+                                Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi
+                                y a los oradores de primer nivel que tenemos para ti. Te esperamos
+                              </p>
+                              <a href="#">Quiero ser orador</a>
+                              <button type="button">Comprar tickets</button>
+                          </div>
+                      </div>
+                  </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
