Design buttons Bootstrap

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="overlay">
                   <div class="container">
                       <div class="row align-items-center">
-                          <div class="col-md-6 offset-md-6 text-center text-md-end">
+                          <div class="col-md-6 offset-md-5 text-center text-md-end">
                               <h1>Platzi Conf Hawaii</h1>
                               <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
                                 compartir con nuestra comunidad el conocimiento y experiencia
@@ -66,8 +66,8 @@
                                 Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi
                                 y a los oradores de primer nivel que tenemos para ti. Te esperamos
                               </p>
-                              <a href="#">Quiero ser orador</a>
-                              <button type="button">Comprar tickets</button>
+                              <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                              <button class="btn btn-platzi" type="button">Comprar tickets</button>
                           </div>
                       </div>
                   </div>
@@ -83,6 +83,10 @@
             </button>
           </div>
     </main>
+
+    <section id="speakers">
+
+    </section>
 
 
 
