--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="overlay">
                   <div class="container">
                       <div class="row align-items-center">
-                          <div class="col-md-6 offset-md-5 text-center text-md-end">
+                          <div class="col-md-6 offset-md-6 text-center text-md-end">
                               <h1>Platzi Conf Hawaii</h1>
                               <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
                                 compartir con nuestra comunidad el conocimiento y experiencia
@@ -73,18 +73,57 @@
                   </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
     </main>
 
-    <section id="speakers">
+    <section id="speakers" class="mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center text-uppercase">
+                    <small>Conoce a los</small>
+                    <h2>Speakers</h2>   <!-- Puedo poner le class="h6" y el tamaño seria de h6 pero con importancia de h2 -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/sacha.jpg" alt="sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Sacha Lifszyc</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/freddy.jpeg" alt="sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Freddy Vega</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/cvander.jpeg" alt="sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Christian Van Der H.</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="./assets/leonidas.jpeg" alt="sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Leonidas Esteban</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </section>
 
