Container Fluid, responsive

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="card">
                         <img class="card-img-top" src="./assets/sacha.jpg" alt="sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Sacha Lifszyc</h5>
+                          <h5 class="card-title text-space" >Sacha Lifszyc<span id="badge" class="badge text-bg-warning ms-2">JavaScript</span><span id="badge" class="badge text-bg-info ms-2">React</span></h5>                          
                           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                     <div class="card">
                         <img class="card-img-top" src="./assets/freddy.jpeg" alt="sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Freddy Vega</h5>
+                          <h5 class="card-title">Freddy Vega<span id="badge" class="badge text-bg-warning ms-2">JavaScript</span><span id="badge" class="badge text-bg-info ms-2">React</span></h5>
                           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                     <div class="card">
                         <img class="card-img-top" src="./assets/cvander.jpeg" alt="sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Christian Van Der H.</h5>
+                          <h5 class="card-title">Christian Van Der H.<span id="badge" class="badge text-bg-warning ms-2">JavaScript</span><span id="badge" class="badge text-bg-info ms-2">React</span></h5>
                           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
                         </div>
                     </div>
@@ -116,15 +116,28 @@
                     <div class="card">
                         <img class="card-img-top" src="./assets/leonidas.jpeg" alt="sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Leonidas Esteban</h5>
+                          <h5 class="card-title">Leonidas Esteban<span id="badge" class="badge text-bg-warning ms-2">JavaScript</span><span id="badge" class="badge text-bg-info ms-2">React</span></h5>
                           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos assumenda perspiciatis similique nulla odit!</p>                          
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
 
-
+    <section id="place-time">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-6 ps-0 pe-0">
+                    <img src="./assets/honolulu.jpg" alt="Isla Honolulu">
+                </div>
+                <div class="col-12 col-lg-6 pb-4">
+                    <h2 class="mt-4">Honolulu - Octubre 2025</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nihil saepe, ad amet eveniet cum voluptates veritatis nisi ex a possimus aut animi explicabo quia odit placeat suscipit aspernatur recusandae officia corporis, autem accusantium. Delectus rem non accusantium reprehenderit facere cum consectetur fugit iste nihil, necessitatibus adipisci totam ex nobis.</p>
+                    <a class="btn btn-outline-light" href="#">Conoce más</a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
