forms and variations

--- a/index.html
+++ b/index.html
@@ -140,6 +140,48 @@
         </div>
     </section>
 
+    <section id="become-speaker">
+        <div class="container">
+            <div class="row">
+                <div class="col text-uppercase text-center">
+                    <small>Conviértete en un</small>
+                    <h2>Speaker</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col text-center">
+                    <p>Anótate como un orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+                    <div class="row">
+                        <div class="form-label col-12 col-md-6 ">
+                            <input type="text" class="form-control" placeholder="Nombre(s)" aria-label="First name">
+                        </div>
+                        <div class="form-label col-12 col-md-6">
+                            <input type="text" class="form-control" placeholder="Apellido(s)" aria-label="Last name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-label">
+                            <textarea name= "text" class="form-control  form-control-lg" placeholder="Sobre qué quires hablar?"></textarea>
+                            <small class="form text text-muted" >Recuerda incluir un título para tu charla</small>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-label d-grid">
+                            <button type="button" class="btn btn-platzi">Enviar</button>
+                        </div>
+                    </div>
+                </div>                                
+            </div>           
+        </div>
+    </section>
+
+
+    
+
 
 
     <footer id="footer">
