--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <p>Anótate como un orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
+                    <p>Anótate como un orador para dar una <abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="Charlas de 5 minutos">charla ignite</abbr>. Cuéntanos de qué quieres hablar!</p>
                 </div>
             </div>
             <div class="row">
@@ -214,5 +214,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
