--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#navbar-spy">
     <header>
-        <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav id="navbar-spy" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">            
                 <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -22,19 +22,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                        <a class="nav-link active" aria-current="page" href="#main">La conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Los oradores</a>
+                        <a class="nav-link" href="#speakers">Los oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">El lugar y la fecha</a>
+                        <a class="nav-link" href="#place-time">El lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Conviértete en orador</a>
+                        <a class="nav-link" href="#become-speaker">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
+                        <a class="nav-link text-platzi" href="#" data-bs-toggle="modal" data-bs-target="#modal-compra">Comprar Tickets</a>
                     </li>
                     </ul>                
                 </div>
@@ -66,8 +66,8 @@
                                 Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi
                                 y a los oradores de primer nivel que tenemos para ti. Te esperamos
                               </p>
-                              <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
-                              <button class="btn btn-platzi" type="button">Comprar tickets</button>
+                              <a href="#become-speaker" class="btn btn-outline-light" data-bs-placement="bottom" data-bs-toggle="tooltip" title="Registrate en 3 pasos" >Quiero ser orador</a>
+                              <button class="btn btn-platzi" type="button" data-bs-toggle="modal" data-bs-target="#modal-compra">Comprar tickets</button>
                           </div>
                       </div>
                   </div>
@@ -150,7 +150,7 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <p>Anótate como un orador para dar una <abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="Charlas de 5 minutos">charla ignite</abbr>. Cuéntanos de qué quieres hablar!</p>
+                    <p>Anótate como un orador para dar una <i><abbr data-bs-toggle="tooltip" data-bs-placement="bottom" title="Charlas de 5 minutos">charla ignite</abbr></i> . Cuéntanos de qué quieres hablar!</p>
                 </div>
             </div>
             <div class="row">
@@ -178,11 +178,6 @@
             </div>           
         </div>
     </section>
-
-
-    
-
-
 
     <footer id="footer">
         <div class="container">
@@ -212,6 +207,37 @@
         </div>
     </footer>
 
+    <div class="modal fade" id="modal-compra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Comprar tickets</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="row">
+                        <div class="form-label col">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="basic-addon1">@</span>
+                                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                        </div>
+                    </div>                    
+                </form>
+                <div class="alert alert-warning" role="alert">
+                    Recibirás un Email de confirmación si sales sorteado
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              <button type="button" class="btn btn-platzi">Comprar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
